@@ -5,7 +5,6 @@ import com.github.joshliford.amplifyguitar.repository.PracticeGoalRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /*
 Core method:
@@ -30,7 +29,7 @@ public class PracticeGoalService {
                         practiceGoal.getTitle(),
                         practiceGoal.getXpReward()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
